[gd_scene load_steps=7 format=3 uid="uid://wd4olcuavot"]

[ext_resource type="Texture2D" uid="uid://chtrguk37mbhg" path="res://assets/TinySwords/Resources/Resources/G_Idle.png" id="1_8g072"]
[ext_resource type="Script" path="res://overworld/city/ui/building.gd" id="1_kwh0t"]
[ext_resource type="Texture2D" uid="uid://d0ccfiowlx3yv" path="res://assets/TinySwords/Resources/Resources/W_Idle.png" id="2_rntc4"]
[ext_resource type="Texture2D" uid="uid://cl86yhw6xxdvb" path="res://assets/brick.png" id="3_ileis"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1o8a7"]
atlas = ExtResource("1_8g072")
region = Rect2(46.3917, 48.1721, 44.7129, 52.0331)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwddi"]
atlas = ExtResource("2_rntc4")
region = Rect2(38, 72, 52, 29)

[node name="Building" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_kwh0t")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="building_icon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="gold_icon" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_1o8a7")
expand_mode = 3
stretch_mode = 5

[node name="gold_cost" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="wood_icon" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_dwddi")
expand_mode = 3
stretch_mode = 5

[node name="wood_cost" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="stone_icon" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ileis")
expand_mode = 3
stretch_mode = 5

[node name="stone_cost" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="build_button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "build"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/build_button" to="." method="on_build_button_pressed"]
